force-app/main/default/objects/Pulse_Check__c/Pulse_Check__c.object-meta.xml
<CustomObject>
    <label>Pulse Check</label>
    <nameField>
        <label>Pulse Check Name</label>
        <type>AutoNumber</type>
        <displayFormat>PC-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Pulse Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>