force-app/main/default/objects/Pulse_Check__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pulse Checks</relationshipLabel>
    <relationshipName>Pulse_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>