force-app/main/default/objects/Pulse_Check__c/fields/Axis_Scores__c.field-meta.xml
<CustomField>
    <fullName>Axis_Scores__c</fullName>
    <label>Axis Scores</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>