force-app/main/default/objects/Pulse_Check__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Pulse Checks</relationshipLabel>
    <relationshipName>Pulse_Checks</relationshipName>
    <type>Lookup</type>
</CustomField>