force-app/main/default/objects/Pulse_Check__c/fields/Quiz_Type__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Type__c</fullName>
    <label>Quiz Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Footprint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>