force-app/main/default/objects/Pulse_Check__c/fields/Risk_Band__c.field-meta.xml
<CustomField>
    <fullName>Risk_Band__c</fullName>
    <label>Risk Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>