force-app/main/default/objects/Pulse_Check__c/fields/Source_Page__c.field-meta.xml
<CustomField>
    <fullName>Source_Page__c</fullName>
    <label>Source Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>