force-app/main/default/objects/Pulse_Check__c/fields/Top_Gaps__c.field-meta.xml
<CustomField>
    <fullName>Top_Gaps__c</fullName>
    <label>Top Gaps</label>
    <type>TextArea</type>
</CustomField>